<resources>
    <string name="app_name">BLEdevice</string>
    <string name="search_devices">Search devices</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="send">Send</string>
    <string name="glucose">Glucose</string>
    <string name="meal">Meal</string>
    <string name="basal_ins">Basal Ins</string>
    <string name="basal_value">Basal Value</string>
    <string name="bolus_ins">Bolus Ins</string>
    <string name="bolus_value">Bolus value</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="ip_address">IP Address</string>
    <string name="client_id">Client ID</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="def_83_149_249_52">def: 83.149.249.16:8888</string>
    <string name="reset">Reset</string>
    <string name="none"><![CDATA[<none>]]></string>
    <string name="device_name">Device Name</string>
    <string name="mac_address">Mac address</string>
    <string name="ok_button">OK</string>


    <string name="bolus_title">What is bolus insulin?</string>
    <string name="basal_title">What is basal insulin?</string>

    <string name="basal_meaning">The role of basal insulin, also known as background insulin, is to keep blood glucose
        levels at consistent levels during periods of fasting. When fasting, the body steadily releases glucose into the
        blood to our cells supplied with energy. Basal insulin is therefore needed to keep blood glucose levels under
        control, and to allow the cells to take in glucose for energy. Basal insulin is usually taken once or twice a
        day depending on the insulin. Basal insulin need to act over a relatively long period of time and therefore
        basal insulin will either be long acting insulin or intermediate insulin.
    </string>
    <string name="bolus_meaning">A bolus dose is insulin that is specifically taken at meal times to keep blood glucose
        levels under control following a meal. Bolus insulin needs to act quickly and so short acting insulin or rapid
        acting insulin will be used. Bolus insulin is often taken before meals but some people may be advised to take
        their insulin during or just after a meal if hypoglycemia needs to be prevented. Your doctor will be able to
        advise you if you have any
        questions as to when your bolus insulin should be taken.
    </string>
    <string name="divider">Divider</string>
    <string name="show_hide_console">Show/Hide console</string>


</resources>
