<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            tools:context=".MainActivity">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:subtitleTextColor="@color/white"
                app:titleTextColor="@color/white" />

        <TextView
                android:id="@+id/textView_glucose"
                style="@style/labels_textView"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="38dp"
                android:text="@string/glucose"
                app:layout_constraintBottom_toBottomOf="@id/editText_glucose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/editText_glucose" />

        <EditText
                android:id="@+id/editText_glucose"
                android:layout_width="125dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="5.9"
                android:inputType="number|numberDecimal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <TextView
                android:id="@+id/timeTextView"
                style="@style/labels_textView"
                android:text="@string/time"
                app:layout_constraintBottom_toBottomOf="@id/timeText"
                app:layout_constraintStart_toStartOf="@id/textView_glucose"
                app:layout_constraintTop_toTopOf="@id/timeText" />

        <TextView
                android:id="@+id/timeText"
                style="@style/labels_textView"
                android:layout_marginTop="20dp"
                android:text="14:21"
                android:textAlignment="center"
                android:textColor="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_glucose" />

        <TextView
                android:id="@+id/dateTextView"
                style="@style/labels_textView"
                android:text="@string/date"
                app:layout_constraintBottom_toBottomOf="@id/dateText"
                app:layout_constraintStart_toStartOf="@id/textView_glucose"
                app:layout_constraintTop_toTopOf="@id/dateText" />

        <TextView
                android:id="@+id/dateText"
                style="@style/labels_textView"
                android:layout_marginTop="20dp"
                android:text="21.03.2018"
                android:textAlignment="center"
                android:textColor="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timeText" />

        <View
                android:id="@+id/dividingLine"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="20dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@id/dateText" />

        <TextView
                android:id="@+id/textView2"
                style="@style/labels_textView"
                android:layout_marginEnd="16dp"
                android:text="@string/ip_address"
                app:layout_constraintBottom_toBottomOf="@id/IPADDR_View"
                app:layout_constraintStart_toStartOf="@id/textView_glucose"
                app:layout_constraintTop_toTopOf="@id/IPADDR_View" />

        <EditText
                android:id="@+id/IPADDR_View"
                android:layout_width="155dp"
                android:layout_height="41dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/def_83_149_249_52"
                android:inputType="text"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividingLine" />

        <TextView
                android:id="@+id/textView4"
                style="@style/labels_textView"
                android:layout_marginEnd="16dp"
                android:text="@string/client_id"
                app:layout_constraintBottom_toBottomOf="@id/CLIENTID_View"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintTop_toTopOf="@id/CLIENTID_View" />


        <EditText
                android:id="@+id/CLIENTID_View"
                android:layout_width="149dp"
                android:layout_height="41dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="1"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/IPADDR_View" />

        <TextView
                android:id="@+id/divider_text"
                style="@style/labels_textView"
                android:layout_marginEnd="16dp"
                android:text="@string/divider"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintTop_toTopOf="@id/divider" />

        <EditText
                android:id="@+id/divider"
                android:layout_width="149dp"
                android:layout_height="41dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="192"
                android:inputType="number"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/CLIENTID_View" />

        <Button
                android:id="@+id/saveButton"
                style="@style/Default_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="16dp"
                android:elevation="4dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>